helloserver/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloserver
spec:
  host: hellosvc
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
