helloserver/istio/virtualservice-split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloserver1
spec:
  hosts:
  - hellosvc
  http:
  - route:
    - destination:
        host: hellosvc
        subset: v1
      weight: 15
    - destination:
        host: hellosvc
        subset: v2
      weight: 85
